--- a/OnlineExaminationWeb/Views/Users/Index.cshtml
+++ b/OnlineExaminationWeb/Views/Users/Index.cshtml
@@ -21,7 +21,7 @@
                 {
                     <tr>
                         <td>@item.Name</td>
-                        <td>@item.Username</td>
+                        <td>@item.UserName</td>
                         <td>Teacher</td>
                     </tr>
                 }
@@ -42,7 +42,7 @@
     </div>
 </div>
 
-@section sctipts{ 
+@section scripts{ 
     <script>
         $(document).ready(function () {
             $('#userGrid').DataTable({
