--- a/OnlineExaminationWeb/Views/_ViewImports.cshtml
+++ b/OnlineExaminationWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using OnlineExaminationWeb
 @using OnlineExaminationWeb.Models
+@using OnlineExaminationViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, cloudscribe.Web.Pagination
