--- a/OnlineExaminationWeb/Views/Users/Create.cshtml
+++ b/OnlineExaminationWeb/Views/Users/Create.cshtml
@@ -5,18 +5,10 @@
 }
 
 <h1>Create</h1>
-
-<h4>UserViewModel</h4>
-<hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -31,17 +23,7 @@
                 <label asp-for="Password" class="control-label"></label>
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Role" class="control-label"></label>
-                <input asp-for="Role" class="form-control" />
-                <span asp-validation-for="Role" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TotalCount" class="control-label"></label>
-                <input asp-for="TotalCount" class="form-control" />
-                <span asp-validation-for="TotalCount" class="text-danger"></span>
-            </div>
+            </div>>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
