@section part is added.

--- a/OnlineExaminationWeb/Views/Students/Index.cshtml
+++ b/OnlineExaminationWeb/Views/Students/Index.cshtml
@@ -46,3 +46,14 @@
         </cs-pager>
     </div>
 </div>
+
+@section scripts{ 
+<script>
+    $(document).ready(function () {
+        $('#student-grid').DataTable({
+            "paging": false,
+            "filter": true
+        });
+    });
+</script>
+}
