--- a/OnlineExaminationWeb/Views/Students/Index.cshtml
+++ b/OnlineExaminationWeb/Views/Students/Index.cshtml
@@ -10,7 +10,10 @@
     <br />
     <a asp-action="Create" asp-controller="Students" class="btn btn-primary">Create</a>
     <div>
-        <table id="student-grid" class="table table-striped table-bordered dt-responsive nowrap" width="100%" cellspacing="0">
+        <table id="student-grid" 
+               class="table table-striped table-bordered dt-responsive nowrap" 
+               width="100%" 
+               cellspacing="0">
             <thead>
                 <tr>
                     <th>Name</th>
@@ -26,7 +29,10 @@
                         <td>@item.Name</td>
                         <td>@item.UserName</td>
                         <td>@item.Contact</td>
-                        <td><a asp-action="Result" asp-controller="Students" asp-all-route-data="@(new Dictionary<string, string> { { "studentId",item.Id.ToString()} })" class="btn btn-primary">Result</a></td>
+                        <td><a asp-action="Result" 
+                               asp-controller="Students" 
+                               asp-all-route-data="@(new Dictionary<string, string> { { "studentId",item.Id.ToString()} })" 
+                               class="btn btn-primary">Result</a></td>
                         <td></td>
                     </tr>
                 }
